Removed link to resume

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<div id="container">
-			<h1>I'm <a href="/resume">Grant Butler</a>.</h1>
+			<h1>I'm Grant Butler.</h1>
 			<h2>I make iPhone apps.</h2>
 			<h3>Find me around online.</h3>
 			
