--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 		
+		<meta name="viewport" content="user-scalable=no, width=device-width">
+		
 		<script>
 			if(location.hash != '#home') {
 				document.write('<link rel="stylesheet" type="text/css" href="css/animate.css">');
