Change font-size for mobile portrait.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 				location.hash = '#home';
 			}
 		</script>
+		
+		<style>
+			@media only screen and (max-width : 320px) {
+				/* Styles */
+				body {
+					font-size: 200%;
+				}
+			}
+		</style>
 	</head>
 	<body>
 		<div id="container">
