Let's test something else.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			@media only screen and (max-width : 320px) {
 				/* Styles */
 				h1 {
-					font-size: 700%;
+					font-size: 700% !important;
 				}
 			}
 		</style>
