--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 			}
 		</script>
 		
-		<style>
+		<style type="text/css">
 			@media only screen and (max-width : 320px) {
 				/* Styles */
 				h1 {
-					font-size: 700% !important;
+					font-size: 700%;
 				}
 			}
 		</style>
