--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<title>Grant J. Butler</title>
 		<meta charset="utf-8">
 		
+		<meta name="viewport" content="width=device-width">
+		
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
 		
@@ -14,15 +16,6 @@
 				location.hash = '#home';
 			}
 		</script>
-		
-		<style type="text/css">
-			@media only screen and (max-width : 320px) {
-				/* Styles */
-				h1 {
-					font-size: 700%;
-				}
-			}
-		</style>
 	</head>
 	<body>
 		<div id="container">
