Let's try scale instead.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Grant J. Butler</title>
 		<meta charset="utf-8">
 		
-		<meta name="viewport" content="width=640">
+		<meta name="viewport" content="user-scalable=no, initial-scale=1.5">
 		
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
