--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="user-scalable=no, initial-scale=0.6">
 		
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="css/fontawesome.css">
 		
 		<script>
 			if(location.hash != '#home') {
@@ -25,9 +25,10 @@
 			
 			<nav>
 				<ul>
-					<li><a href="https://github.com/grantjbutler" class="icon-github-sign"><span>Github</span></a></li>
-					<li><a href="https://twitter.com/grantjbutler" class="icon-twitter-sign"><span>Twitter</span></a></li>
-					<li><a href="http://www.linkedin.com/pub/grant-butler/48/9b1/482" class="icon-linkedin-sign"><span>LinkedIn</span></a></li>
+					<li><a href="https://github.com/grantjbutler" class="fab fa-github"><span>Github</span></a></li>
+					<li><a href="https://twitter.com/grantjbutler" class="fab fa-twitter"><span>Twitter</span></a></li>
+					<li><a href="https://mastodon.social/@grantjbutler" class="fab fa-mastodon" rel="me"><span>Mastodon</span></a></li>
+					<li><a href="http://www.linkedin.com/pub/grant-butler/48/9b1/482" class="fab fa-linkedin"><span>LinkedIn</span></a></li>
 				</ul>
 			</nav>
 		</div>
