--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <title>GitHub</title>
                 <path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"></path>
               </svg></a>
-            <a href="https://hachyderm.io/@grantjbutler">
+            <a href="https://hachyderm.io/@grantjbutler" rel="me">
               <svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 fill-current text-gray-400 hover:text-gray-500">
                 <title>Mastodon</title>
                 <path d="M23.268 5.313c-.35-2.578-2.617-4.61-5.304-5.004C17.51.242 15.792 0 11.813 0h-.03c-3.98 0-4.835.242-5.288.309C3.882.692 1.496 2.518.917 5.127.64 6.412.61 7.837.661 9.143c.074 1.874.088 3.745.26 5.611.118 1.24.325 2.47.62 3.68.55 2.237 2.777 4.098 4.96 4.857 2.336.792 4.849.923 7.256.38.265-.061.527-.132.786-.213.585-.184 1.27-.39 1.774-.753a.057.057 0 0 0 .023-.043v-1.809a.052.052 0 0 0-.02-.041.053.053 0 0 0-.046-.01 20.282 20.282 0 0 1-4.709.545c-2.73 0-3.463-1.284-3.674-1.818a5.593 5.593 0 0 1-.319-1.433.053.053 0 0 1 .066-.054c1.517.363 3.072.546 4.632.546.376 0 .75 0 1.125-.01 1.57-.044 3.224-.124 4.768-.422.038-.008.077-.015.11-.024 2.435-.464 4.753-1.92 4.989-5.604.008-.145.03-1.52.03-1.67.002-.512.167-3.63-.024-5.545zm-3.748 9.195h-2.561V8.29c0-1.309-.55-1.976-1.67-1.976-1.23 0-1.846.79-1.846 2.35v3.403h-2.546V8.663c0-1.56-.617-2.35-1.848-2.35-1.112 0-1.668.668-1.67 1.977v6.218H4.822V8.102c0-1.31.337-2.35 1.011-3.12.696-.77 1.608-1.164 2.74-1.164 1.311 0 2.302.5 2.962 1.498l.638 1.06.638-1.06c.66-.999 1.65-1.498 2.96-1.498 1.13 0 2.043.395 2.74 1.164.675.77 1.012 1.81 1.012 3.12z"></path>
@@ -103,28 +103,28 @@
                 <header class="flex justify-between items-center gap-4">
                   <h3 class="text-slate-700">
                     <a href="/articles/so-lets-try-this-blogging-thing-again">So, Let's Try This &quot;Blogging&quot; Thing Again...</a></h3>
-                  <div class="border-b border-slate-300 flex-grow h-0"></div>
-                  <span class="text-slate-500 font-light">Aug 2023</span></header>
+                  <div class="border-b border-slate-300 flex-grow h-0 hidden sm:block"></div>
+                  <span class="text-slate-500 font-light flex-none">Aug 2023</span></header>
                 <p class="text-sm text-slate-500">In which I rebuild my website to start writing again.</p></article></div></article></div></div>
       <div class="bg-gray-200">
         <div class="container mx-auto px-4 sm:px-0 md:max-w-[768px]">
           <article class="py-6">
             <h2 class="text-2xl text-slate-700 mb-4 font-semibold">I play a lot of video games.</h2>
             <div>
-              <div class="flex justify-between gap-4">
-                <div class="w-1/4 flex flex-col gap-2">
+              <div class="grid grid-cols-2 sm:grid-cols-none sm:flex sm:justify-between gap-4">
+                <div class="sm:w-1/4 flex flex-col gap-2">
                   <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co49x5.png" alt="Minecraft" class="rounded shadow"/>
                   <h3 class="underline text-sm text-slate-700">
                     <a href="https://minecraft.net/">Minecraft</a></h3></div>
-                <div class="w-1/4 flex flex-col gap-2">
+                <div class="sm:w-1/4 flex flex-col gap-2">
                   <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co1iyf.png" alt="Slay the Spire" class="rounded shadow"/>
                   <h3 class="underline text-sm text-slate-700">
                     <a href="https://www.megacrit.com/">Slay the Spire</a></h3></div>
-                <div class="w-1/4 flex flex-col gap-2">
+                <div class="sm:w-1/4 flex flex-col gap-2">
                   <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co390m.png" alt="Tiny Tina's Wonderlands" class="rounded shadow"/>
                   <h3 class="underline text-sm text-slate-700">
                     <a href="https://playwonderlands.2k.com/">Tiny Tina's Wonderlands</a></h3></div>
-                <div class="w-1/4 flex flex-col gap-2">
+                <div class="sm:w-1/4 flex flex-col gap-2">
                   <img src="https://images.igdb.com/igdb/image/upload/t_cover_big/co5vmg.png" alt="The Legend of Zelda: Tears of the Kingdom" class="rounded shadow"/>
                   <h3 class="underline text-sm text-slate-700">
                     <a href="https://zelda.com/tears-of-the-kingdom">The Legend of Zelda: Tears of the Kingdom</a></h3></div></div></div></article></div></div></div>
