--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h2 class="text-2xl text-slate-700 mb-4 font-semibold">I write about whatever tickles my fancy.</h2>
             <div>
               <article>
-                <header class="flex justify-between items-center gap-4">
+                <header class="flex justify-between items-start sm:items-center gap-4">
                   <h3 class="text-slate-700">
                     <a href="/articles/so-lets-try-this-blogging-thing-again">So, Let's Try This &quot;Blogging&quot; Thing Again...</a></h3>
                   <div class="border-b border-slate-300 flex-grow h-0 hidden sm:block"></div>
