--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="alternate" href="/feed.rss" type="application/rss+xml" title="Subscribe to Grant J Butler"/>
   </head>
   <body class="bg-gray-100 text-slate-900">
-    <header class="bg-gray-100/40 backdrop-blur-md fixed w-full">
+    <header class="bg-gray-100/[.65] backdrop-blur-md fixed w-full z-50">
       <div class="flex justify-between items-baseline px-4 sm:px-2 py-3 border-b border-gray-400 container mx-auto lg:max-w-[1024px]">
         <h1 class="text-2xl font-semibold">
           <a href="/">Grant J Butler</a></h1>
@@ -99,7 +99,14 @@
           <article class="py-6">
             <h2 class="text-2xl text-slate-700 mb-4 font-semibold">I write about whatever tickles my fancy.</h2>
             <div>
-              <article>
+              <article class="mb-2 last:mb-0">
+                <header class="flex justify-between items-start sm:items-center gap-4">
+                  <h3 class="text-slate-700">
+                    <a href="/articles/using-tailwind-with-publish">Making Tailwind and Publish Play Nice With Each Other</a></h3>
+                  <div class="border-b border-slate-300 flex-grow h-0 hidden sm:block"></div>
+                  <span class="text-slate-500 font-light flex-none">Sep 2023</span></header>
+                <p class="text-sm text-slate-500">In which I make my website look decent.</p></article>
+              <article class="mb-2 last:mb-0">
                 <header class="flex justify-between items-start sm:items-center gap-4">
                   <h3 class="text-slate-700">
                     <a href="/articles/so-lets-try-this-blogging-thing-again">So, Let's Try This &quot;Blogging&quot; Thing Again...</a></h3>
